<resources>
    <string name="app_name">Roomer App</string>

    <string name="web_application_id">739467235704-4g2nm0n6mjeofabgbdg8j8fgql2dmec1.apps.googleusercontent.com</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_profile_create">Crear Perfil</string>

    <!-- Title text for the empty view in Results Screen [CHAR LIMIT=50] -->
    <string name="generic_loading_tittle">Cargando&#8230;</string>

    <string name="editor_activity_title_filters_create">Elegir Filtros</string>

    <string name="editor_activity_title_profile_edit">Editar Perfil</string>

    <!-- Title for the activity to edit a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="nav_profile">Perfil</string>

    <!-- Label for editor overflow menu option that starts intent to order the current product [CHAR LIMIT=20] -->
    <string name="action_logout">Cerrar sesión</string>

    <!-- Titulo del Spinner (dropdown) para seleccionar el sexo -->
    <string name="spinner_title_sexo">Sexo</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_datos">Info Personal *</string>

    <!-- Label for stock category in the editor [CHAR LIMIT=30] -->
    <string name="category_contact">Info de Contacto *</string>

    <!-- Label for picture in the editor [CHAR LIMIT=30] -->
    <string name="category_picture">Foto Perfil *</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier_info">Supplier Info *</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_name">Nombre</string>

    <!-- Text hint for model field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_last_name">Apellido</string>

    <!-- Text hint for model field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_dni">DNI</string>

    <!-- Text hint for model field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_age">Edad</string>

    <!-- Text hint for model field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_phone">Teléfono (Ej:. 1168302914)</string>

    <!-- Text hint for model field in the editor [CHAR LIMIT=30] -->
    <string name="hint_user_area_code">Cód. Area (Ej:. 549)</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier email field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_email">Email</string>


    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when new product has been successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when new product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Title text for the empty view in Results Screen [CHAR LIMIT=50] -->
    <string name="empty_view_results_title_text">No hay resultados!&#8230;</string>

    <!-- Subtitle text for the Results empty view that prompts the user to update filters [CHAR LIMIT=50] -->
    <string name="empty_view_results_subtitle_text">Elegí nuevos filtros</string>

    <!-- Title text for the empty view in Matches Screen [CHAR LIMIT=50] -->
    <string name="empty_view_matches_title_text">No hay matches!&#8230;</string>

    <!-- Subtitle text for the Matches empty view that prompts the user to search new users [CHAR LIMIT=50] -->
    <string name="empty_view_matches_subtitle_text">Buscá y likea perfiles!</string>

    <!--&lt;!&ndash; Title text for the empty view [CHAR LIMIT=50] &ndash;&gt;-->
    <!--<string name="empty_view_title_text">Your inventory is empty&#8230;</string>-->

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Deseas descartar los cambios?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Descartar</string>

    <!-- Dialog button text for the option to keep editing the current screen [CHAR LIMIT=20] -->
    <string name="keep_editing">Seguir editando</string>

    <!-- Dialog message when user attempts to logout [CHAR LIMIT=NONE] -->
    <string name="sign_out_dialog_msg">¿Estás seguro que querés cerrar la sesión?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard_sign_out">Cancelar</string>

    <!-- Dialog button text for the option to keep editing the current screen [CHAR LIMIT=20] -->
    <string name="confirm_sign_out">Cerrar sesión</string>


    <!--&lt;!&ndash; Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="editor_delete_product_successful">Product deleted</string>-->

    <!--&lt;!&ndash; Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="editor_delete_product_failed">Error with deleting product</string>-->

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product (or all products) [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in ProductsActivity when all products were successfully deleted [CHAR LIMIT=NONE] -->
    <string name="catalog_delete_all_successful">All products were deleted</string>

    <!-- Toast message in ProductsActivity when all products have failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="catalog_delete_products_failed">Error with deleting products</string>

    <!-- Dialog message to ask the user to confirm deleting all the products [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete_all">Delete All</string>

    <!-- Helper label for the product's picture to inform user how to select an image[CHAR LIMIT=20] -->
    <string name="image_tap_helper_text">Tocá para subir una foto</string>

    <!-- Units for weight of the pet (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_pet_currency">AR$\u0020</string>

    <!-- In Stock label for List Item -->
    <string name="age_label_list_item">\u0020años</string>

    <!-- OUT OF STOCK label for cases in which quantity is 0 for List Item -->
    <string name="out_of_stock_label_list_item">OUT OF STOCK</string>

    <!-- Order request subject for Email intent in DetailsActivity -->
    <string name="email_order_request_subject">Order Request</string>
    <string name="title_activity_login">Sign in</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email"</string>
    <string name="client_id_gsi_debug">739467235704&#8211;4g2nm0n6mjeofabgbdg8j8fgql2dmec1.apps.googleusercontent.com</string>
    <string name="client_secret_gsi_debug">"ADD CLIENT SECRET."</string>
    <string name="client_id_gsi_release">739467235704-q3gdmrmvpagsl9q5ppkl4nr5vbjgaahj.apps.googleusercontent.com</string>
    <string name="web_client_id_gsi">739467235704-kg1hhc46t9t8pjlt2a5i5tt4utlk833f.apps.googleusercontent.com</string>


</resources>

