<?xml version="1.0" encoding="utf-8"?><!-- Layout for the Detail/Add Product screen -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Profile.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Profile.ProfileActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/container_profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_margin"
                tools:visibility="visible">
                <!-- Overview category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_datos" />

                    <!-- Input fields -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:paddingLeft="4dp"
                        android:paddingTop="20dp">

                        <!-- Name field -->
                        <EditText
                            android:id="@+id/edit_user_name"
                            style="@style/DetailsFieldStyle"
                            android:hint="@string/hint_user_name"
                            android:inputType="textCapWords" />

                        <!-- Model field -->
                        <EditText
                            android:id="@+id/edit_user_last_name"
                            style="@style/DetailsFieldStyle"
                            android:hint="@string/hint_user_last_name"
                            android:inputType="textCapWords" />

                        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dip">

                            <!-- Text Label -->
                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dip"
                                android:layout_marginBottom="5dp"
                                android:text="Sexo:" />
                            <!-- Spinner Element -->
                            <Spinner
                                android:id="@+id/spinner_gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:prompt="@string/spinner_title_sexo"
                                android:tooltipText="Ingrese su sexo" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/edit_user_dni"
                            style="@style/DetailsFieldStyle"
                            android:hint="@string/hint_user_dni"
                            android:inputType="number"
                            android:maxLength="8" />

                        <EditText
                            android:id="@+id/edit_user_age"
                            style="@style/DetailsFieldStyle"
                            android:hint="@string/hint_user_age"
                            android:inputType="number"
                            android:maxLength="2" />

                        <LinearLayout
                            android:id="@+id/edad_min_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <TextView
                                style="@style/ErrorTextFieldStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:background="@android:color/transparent"
                                android:text="No puede ser menor de 18"
                                android:textColor="@android:color/holo_red_light" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <!-- Supplier Info category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_contact" />

                    <!-- Input fields -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:paddingLeft="4dp"
                        android:paddingTop="20dp">

                        <EditText
                            android:id="@+id/edit_user_area_code"
                            style="@style/DetailsFieldStyle"
                            android:hint="@string/hint_user_area_code"
                            android:inputType="number"
                            android:maxLength="4" />

                        <EditText
                            android:id="@+id/edit_user_phone"
                            style="@style/DetailsFieldStyle"
                            android:hint="@string/hint_user_phone"
                            android:inputType="number"
                            android:maxLength="10" />
                    </LinearLayout>

                </LinearLayout>

                <!-- Picture category -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Label -->
                    <TextView
                        style="@style/CategoryStyle"
                        android:text="@string/category_picture" />

                    <LinearLayout
                        android:id="@+id/edit_product_picture_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:paddingTop="20dp">

                        <!-- Picture field -->
                        <ImageButton
                            android:id="@+id/edit_user_picture"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="start"
                            android:layout_margin="8dp"
                            android:background="@null"
                            android:onClick="pickImage"
                            android:scaleType="centerCrop"
                            android:src="@drawable/placeholder_image" />

                        <!-- Picture helper text -->
                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_gravity="start|center_horizontal"-->
                            <!--android:layout_marginStart="8dp"-->
                            <!--android:layout_marginLeft="8dp"-->
                            <!--android:text="@string/image_tap_helper_text" />-->

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <!-- Empty view for the list -->

    </ScrollView>

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/loading_spinner_container_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:visibility="visible">

        <!--TODO Update para imagen mas acorde-->

        <ProgressBar
            android:id="@+id/loading_spinner_profile"
            android:layout_width="73dp"
            android:layout_height="52dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loading_spinner_profile"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/generic_loading_tittle"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>


</RelativeLayout>

